test/compiler/pass/_fdecl_anon.ods
do () -> return "hello"

do y = (x) -> return x() + 1

do print(
    y(() -> return 41)
)
