test/compiler/fail/_call_types.ods
do sum = (x, y) -> return x + y
do sum(1, "hello")
